# self-agent-memory

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  utils.py
agent/: agent_with_memory.py
benchmark_case/: benchmark_view.ipynb  memory_benchmark_dataset.py  wikihop_dataset.py
misc/: memory_bm25.py  memory_graph.py
test_case/: test_agent_memory.py  test_memory_tools.py  test_nx_graph.py
