[project]
name = "self-agent-memory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "kuzu>=0.11.0",
    "langchain-community>=0.3.27",
    "langchain-kuzu>=0.4.2",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.3",
]

[[tool.uv.index]]
url = "https://mirrors.cloud.tencent.com/pypi/simple"
default = true
