[project]
name = "self-agent-memory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "dotenv>=0.9.9",
    "huggingface-hub>=0.33.4",
    "ipykernel>=6.29.5",
    "jieba>=0.42.1",
    "kuzu>=0.11.0",
    "langchain-community>=0.3.27",
    "langchain-kuzu>=0.4.2",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.3",
    "networkx>=3.5",
    "pyvis>=0.3.2",
    "rank-bm25>=0.2.2",
]

[[tool.uv.index]]
url = "https://mirrors.cloud.tencent.com/pypi/simple"
default = true
